@@ -1,5 +1,15 @@
 2011-11-29  Pavel Feldman  <pfeldman@google.com>
 
+        Not reviewed: fixing clang build.
+
+        * inspector/InspectorBaseAgent.h:
+        (WebCore::InspectorBaseAgentInterface::getAgentCapabilities):
+        * inspector/InspectorDebuggerAgent.cpp:
+        (WebCore::InspectorDebuggerAgent::getAgentCapabilities):
+        * inspector/InspectorDebuggerAgent.h:
+
+2011-11-29  Pavel Feldman  <pfeldman@google.com>
+
         Web Inspector: introduce generic capabilities concept, migrate debugger domain to generic capabilities.
         https://bugs.webkit.org/show_bug.cgi?id=73311
 
